--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,5 +1,5 @@
 meta_product_name: "The Real Estate Jungle"
-meta_title: "The Real Estate Jungle - le guide de l'immobilier d'entreprise"
-meta_description: "The Real Estate Jungle est le guide qui vous accompagne dans vos recherches immobilières. Les solutions immobilières sont nombreuses, Coworking, bureaux classiques, location ou investissement."
+meta_title: "The Real Estate Jungle - le guide du Coworking"
+meta_description: "Le premier cabinet de conseil en Coworking dédié aux startups et grands groupes. Les solutions immobilières sont nombreuses, Coworking, bureaux classiques, location ou investissement. The Real Estate Jungle vous accompagne dans vos projets immobiliers"
 meta_image: "sharedpicture.png"                       # should exist in `app/assets/images/`
 twitter_account: "@GautierWeigert"   # required for Twitter Cards
