--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,5 +1,5 @@
 meta_product_name: "The Real Estate Jungle"
-meta_title: "The Real Estate Jungle - le guide des espaces de travail flexibles"
+meta_title: "The Real Estate Jungle - le guide du Coworking"
 meta_description: "Changez votre manière de travailler, choisissez l'agilité - Cabinet de conseil en coworking et espaces de travail flexibles dédié aux startups et grands groupes. The Real Estate Jungle vous accompagne dans vos projets immobiliers"
 meta_image: "TREJhome.png"                       # should exist in `app/assets/images/`
 twitter_account: "@GautierWeigert"   # required for Twitter Cards
